--- a/WebApp/templates/Cart.html
+++ b/WebApp/templates/Cart.html
@@ -192,21 +192,21 @@
 							<tbody>
 								<tr class="total-data">
 									<td><strong>Subtotal: </strong></td>
-									<td>Rs. {{total}}</td>
+									<td>Rs. {{subtotal}}</td>
 								</tr>
 								<tr class="total-data">
 									<td><strong>Shipping: </strong></td>
-									<td>$45</td>
+									<td>Rs. {{shipping_charge}}</td>
 								</tr>
 								<tr class="total-data">
 									<td><strong>Total: </strong></td>
-									<td>$545</td>
+									<td>Rs. {{total}}</td>
 								</tr>
 							</tbody>
 						</table>
 						<div class="cart-buttons">
 							<a href="cart.html" class="boxed-btn">Update Cart</a>
-							<a href="checkout.html" class="boxed-btn black">Check Out</a>
+							<a href="{% url 'Checkout_page' %}" class="boxed-btn black">Check Out</a>
 						</div>
 					</div>
 
