Feat :payment Page setup

--- a/WebApp/templates/Checkout.html
+++ b/WebApp/templates/Checkout.html
@@ -177,6 +177,7 @@
                                             <p><input type="email" placeholder="Email" required name="email"></p>
                                             <p><input type="text" placeholder="Address" required name="address"></p>
                                             <p><input type="tel" placeholder="Phone" required name="phone"></p>
+                                            <p><input type="hidden" value="{{total}}" name="totalprice"></p>
                                             <p><textarea  id="bill" cols="30" rows="10" name="message"
                                                          placeholder="Say Something"></textarea></p>
                                             <input  class="boxed-btn" type="submit" value="Place Order">
